# cann-hccl

./: CMakeLists.txt  README.md  version.info
inc/hccl/: OWNERS  hccl.h  hccl_types.h
src/domain/collective_communication/algorithm/: CMakeLists.txt
src/domain/collective_communication/algorithm/base/: CMakeLists.txt
src/domain/collective_communication/algorithm/base/alg_aiv_template/: CMakeLists.txt  aiv_all_gather_91093_smalldata.h  aiv_all_gather_91093_smalldata_graph.h  aiv_all_gather_910B_rdma.h  aiv_all_gather_910B_rdma_graph.h  aiv_all_gather_910b_bigdata.h  aiv_all_gather_910b_graph.h  aiv_all_gather_910b_smalldata.h  aiv_all_gather_v_910b_bigdata.h  aiv_all_gather_v_910b_smalldata.h  aiv_all_reduce_910b_bigdata.h  aiv_all_reduce_910b_bigdata_graph.h  aiv_all_reduce_910b_middata.h  aiv_all_reduce_910b_rdma_middata.h  aiv_all_reduce_910b_rdma_middata_graph.h  aiv_all_reduce_910b_rdma_smalldata.h  aiv_all_reduce_910b_rdma_smalldata_graph.h  aiv_all_reduce_910b_smalldata.h  aiv_all_reduce_910b_smalldata_graph.h  aiv_all_to_all_91093.h  aiv_all_to_all_91093_base.h  aiv_all_to_all_91093_graph.h  aiv_all_to_all_910b_smalldata.h  aiv_all_to_all_rdma_910b.h  aiv_all_to_all_v_91093.h  aiv_all_to_all_v_91093_graph.h  aiv_all_to_all_v_91093_single.h  aiv_all_to_all_v_910b.h  aiv_all_to_all_v_910b_graph.h  aiv_all_to_all_vc_910b_graph.h  aiv_all_to_all_vc_910b_no_loop.h  aiv_communication.h  aiv_communication_base.h  aiv_reduce_scatter_91093_smalldata.h  aiv_reduce_scatter_91093_smalldata_graph.h  aiv_reduce_scatter_910b_bigdata.h  aiv_reduce_scatter_910b_graph.h  aiv_reduce_scatter_910b_middata.h  aiv_reduce_scatter_910b_rdma.h  aiv_reduce_scatter_910b_rdma_graph.h  (+5 more)
src/domain/collective_communication/algorithm/base/alg_template/: CMakeLists.txt  recursive_halvingdoubling_base.cc
src/domain/collective_communication/algorithm/base/communicator/: calc_hd_transport_req.cc  calc_ring_transport_req.cc  topo_info_extractor.cc  topo_info_extractor.h
src/domain/collective_communication/algorithm/base/inc/: aligned_all_gather_double_ring_pub.h  aligned_reduce_scatter_double_ring_pub.h  aligned_reduce_scatter_double_ring_with_serial_local_copy_pub.h  all_gather_halving_doubling_pub.h  all_gather_mesh_atomic.h  all_gather_mesh_direct.h  all_gather_mesh_mix_pub.h  all_gather_mesh_pub.h  all_gather_new_pub.h  all_gather_ring_concurrent_direct_pub.h  all_gather_ring_direct_pub.h  all_gather_ring_pub.h  all_reduce_recursive_hd_pub.h  all_reduce_ring_pub.h  alltoallv_pairwise_pub.h  alltoallv_staged_base_pub.h  alltoallv_staged_calculator_pub.h  alltoallv_staged_mesh_pub.h  alltoallv_staged_pairwise_pub.h  bcast_halvingdoubling_pub.h  broadcast_ring_pub.h  broadcast_star_pub.h  comm_base_pub.h  comm_halving_doubling_pub.h  comm_impl.h  comm_mesh_pub.h  comm_p2p_pub.h  comm_ring_pub.h  comm_star_pub.h  gather_mesh_pub.h  gather_ring_pub.h  gather_star_pub.h  multi_root_scatter_ring_pub.h  recursive_halvingdoubling_base_pub.h  reduce_recursive_hd_pub.h  reduce_ring_pub.h  reduce_scatter_halving_doubling_pub.h  reduce_scatter_mesh_atomic.h  reduce_scatter_mesh_atomic_opbase.h  reduce_scatter_mesh_mix_pub.h  (+10 more)
src/domain/collective_communication/algorithm/impl/: CMakeLists.txt  alg_configurator.cc  alg_configurator.h  coll_alg_utils.cc  coll_alg_utils.h  hccl_aiv.cc  hccl_alg.cc  topo_matcher.cc  topo_matcher.h
src/domain/collective_communication/algorithm/impl/coll_executor/: CMakeLists.txt  alg_profiling.cc  coll_comm_executor.cc  coll_comm_executor.h  coll_executor_base.cc  coll_executor_base.h  coll_native_executor_base.cc  coll_native_executor_base.h
src/domain/collective_communication/algorithm/impl/legacy/: executor_impl.h  hccl_impl.cc  hccl_impl.h
src/domain/collective_communication/algorithm/impl/operator/: CMakeLists.txt  all_gather_operator.cc  all_gather_operator.h  all_gather_v_operator.cc  all_gather_v_operator.h  all_reduce_operator.cc  all_reduce_operator.h  alltoall_operator.cc  batchsendrecv_operator.cc  broadcast_operator.cc  broadcast_operator.h  coll_alg_operator.cc  receive_operator.cc  reduce_operator.cc  reduce_operator.h  reduce_scatter_operator.cc  reduce_scatter_operator.h  reduce_scatter_v_operator.cc  reduce_scatter_v_operator.h  scatter_operator.cc  send_operator.cc
src/domain/collective_communication/algorithm/impl/resource_manager/: ccl_buffer_manager.cc  ccl_buffer_manager.h  hccl_socket_manager.cc  hccl_socket_manager.h  offload_stream_manager.cc  op_base_stream_manager.cc  op_base_stream_manager_pub.h  queue_notify_manager.cc  queue_notify_manager.h  stream_active_manager.cc  stream_active_manager.h  workspace_resource_impl.cc  workspace_resource_impl.h
src/domain/collective_communication/algorithm/impl/task/: parallel_task_loader.cc  parallel_task_loader.h  task_loader.cc  task_loader.h  threadManage.cc
src/domain/collective_communication/algorithm/pub_inc/: OWNERS  alg_profiling.h  alltoall_operator.h  coll_alg_operator.h  coll_alg_param.h  common.h  hccl_aiv.h  hccl_alg.h  hccl_impl_pub.h  threadManage.h
src/domain/collective_communication/framework/: CMakeLists.txt
src/domain/collective_communication/framework/cluster_maintenance/: CMakeLists.txt
src/domain/collective_communication/framework/cluster_maintenance/health/: CMakeLists.txt
src/domain/collective_communication/framework/common/src/: CMakeLists.txt  config.cc  config.h  json_utils.cc  json_utils.h  param_check.cc  state_guard.h
src/domain/collective_communication/framework/communicator/: comm_config.cc  hccl_comm.cc
src/domain/collective_communication/framework/communicator/impl/: CMakeLists.txt  hccl_communicator.cc  hccl_communicator.h  hccl_communicator_attrs.cc  hccl_communicator_attrs.h  task_abort_handler.cc  task_abort_handler.h  task_abort_handler_pub.h
src/domain/collective_communication/framework/hcom/: hcom_common.cc  hcom_common.h
src/domain/collective_communication/framework/inc/: comm.h  comm_config_pub.h  hccl_comm_pub.h  op_base_pub.h  opexecounter_pub.h  topoinfo_struct.h
src/domain/collective_communication/framework/op_base/src/: op_base.cc  op_base.h
(+370 files in other folders)
